[gd_scene load_steps=74 format=3 uid="uid://ck1a1haiox86o"]

[ext_resource type="Script" path="res://character_body_2d.gd" id="1_aewtf"]
[ext_resource type="Texture2D" uid="uid://d3r7yf0oqw8ev" path="res://assets/Player/Samurai.png" id="2_g26f7"]
[ext_resource type="Script" path="res://attack_area.gd" id="3_vjtvk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qp16u"]
atlas = ExtResource("2_g26f7")
region = Rect2(0, 128, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn2qx"]
atlas = ExtResource("2_g26f7")
region = Rect2(48, 128, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttgiv"]
atlas = ExtResource("2_g26f7")
region = Rect2(96, 128, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3vmo"]
atlas = ExtResource("2_g26f7")
region = Rect2(144, 128, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x75i1"]
atlas = ExtResource("2_g26f7")
region = Rect2(192, 96, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsj8k"]
atlas = ExtResource("2_g26f7")
region = Rect2(240, 96, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_78kq3"]
atlas = ExtResource("2_g26f7")
region = Rect2(96, 160, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bceim"]
atlas = ExtResource("2_g26f7")
region = Rect2(144, 160, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bptht"]
atlas = ExtResource("2_g26f7")
region = Rect2(0, 160, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuwd8"]
atlas = ExtResource("2_g26f7")
region = Rect2(0, 0, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hd4i"]
atlas = ExtResource("2_g26f7")
region = Rect2(48, 0, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qcdq"]
atlas = ExtResource("2_g26f7")
region = Rect2(96, 0, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpkl3"]
atlas = ExtResource("2_g26f7")
region = Rect2(144, 0, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_20l1d"]
atlas = ExtResource("2_g26f7")
region = Rect2(0, 96, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ot0ly"]
atlas = ExtResource("2_g26f7")
region = Rect2(48, 96, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6nhx"]
atlas = ExtResource("2_g26f7")
region = Rect2(96, 96, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj7wn"]
atlas = ExtResource("2_g26f7")
region = Rect2(144, 96, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt1h0"]
atlas = ExtResource("2_g26f7")
region = Rect2(192, 96, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cepdj"]
atlas = ExtResource("2_g26f7")
region = Rect2(240, 96, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rww2a"]
atlas = ExtResource("2_g26f7")
region = Rect2(0, 64, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv01b"]
atlas = ExtResource("2_g26f7")
region = Rect2(48, 64, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfpjv"]
atlas = ExtResource("2_g26f7")
region = Rect2(96, 64, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouqkq"]
atlas = ExtResource("2_g26f7")
region = Rect2(144, 64, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0i1e"]
atlas = ExtResource("2_g26f7")
region = Rect2(192, 64, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1yuf"]
atlas = ExtResource("2_g26f7")
region = Rect2(240, 64, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ccc0"]
atlas = ExtResource("2_g26f7")
region = Rect2(288, 64, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_alq1k"]
atlas = ExtResource("2_g26f7")
region = Rect2(336, 64, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dr0ne"]
atlas = ExtResource("2_g26f7")
region = Rect2(0, 256, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jelrn"]
atlas = ExtResource("2_g26f7")
region = Rect2(48, 256, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_maci7"]
atlas = ExtResource("2_g26f7")
region = Rect2(96, 256, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a336k"]
atlas = ExtResource("2_g26f7")
region = Rect2(144, 256, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xewom"]
atlas = ExtResource("2_g26f7")
region = Rect2(192, 256, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpcje"]
atlas = ExtResource("2_g26f7")
region = Rect2(240, 256, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hjqh"]
atlas = ExtResource("2_g26f7")
region = Rect2(288, 256, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1nar"]
atlas = ExtResource("2_g26f7")
region = Rect2(336, 256, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwolw"]
atlas = ExtResource("2_g26f7")
region = Rect2(384, 256, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cepyq"]
atlas = ExtResource("2_g26f7")
region = Rect2(432, 256, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdtrp"]
atlas = ExtResource("2_g26f7")
region = Rect2(480, 256, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x64cl"]
atlas = ExtResource("2_g26f7")
region = Rect2(528, 256, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_07dgw"]
atlas = ExtResource("2_g26f7")
region = Rect2(576, 256, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7fe"]
atlas = ExtResource("2_g26f7")
region = Rect2(624, 256, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ly1km"]
atlas = ExtResource("2_g26f7")
region = Rect2(672, 256, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p76ck"]
atlas = ExtResource("2_g26f7")
region = Rect2(0, 224, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcekn"]
atlas = ExtResource("2_g26f7")
region = Rect2(48, 224, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iubmb"]
atlas = ExtResource("2_g26f7")
region = Rect2(96, 224, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ak0tq"]
atlas = ExtResource("2_g26f7")
region = Rect2(144, 224, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hcdp"]
atlas = ExtResource("2_g26f7")
region = Rect2(192, 224, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjluj"]
atlas = ExtResource("2_g26f7")
region = Rect2(240, 224, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1k37"]
atlas = ExtResource("2_g26f7")
region = Rect2(288, 224, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_giu0k"]
atlas = ExtResource("2_g26f7")
region = Rect2(336, 224, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d47di"]
atlas = ExtResource("2_g26f7")
region = Rect2(384, 224, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrgmt"]
atlas = ExtResource("2_g26f7")
region = Rect2(432, 224, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjucn"]
atlas = ExtResource("2_g26f7")
region = Rect2(0, 32, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8j2t"]
atlas = ExtResource("2_g26f7")
region = Rect2(48, 32, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqga3"]
atlas = ExtResource("2_g26f7")
region = Rect2(96, 32, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgbhs"]
atlas = ExtResource("2_g26f7")
region = Rect2(144, 32, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0lp5"]
atlas = ExtResource("2_g26f7")
region = Rect2(0, 192, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hmmg"]
atlas = ExtResource("2_g26f7")
region = Rect2(48, 192, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7jew"]
atlas = ExtResource("2_g26f7")
region = Rect2(96, 192, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfi3p"]
atlas = ExtResource("2_g26f7")
region = Rect2(144, 192, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr2te"]
atlas = ExtResource("2_g26f7")
region = Rect2(192, 192, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pprxs"]
atlas = ExtResource("2_g26f7")
region = Rect2(240, 192, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4sqv"]
atlas = ExtResource("2_g26f7")
region = Rect2(288, 192, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uc85m"]
atlas = ExtResource("2_g26f7")
region = Rect2(336, 192, 47, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs0nr"]
atlas = ExtResource("2_g26f7")
region = Rect2(384, 192, 47, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yh5xd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp16u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn2qx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttgiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3vmo")
}],
"loop": true,
"name": &"death",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x75i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsj8k")
}],
"loop": true,
"name": &"fall",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_78kq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bceim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bptht")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuwd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hd4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qcdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpkl3")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_20l1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ot0ly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6nhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj7wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt1h0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cepdj")
}],
"loop": true,
"name": &"jump",
"speed": 16.0
}, {
"frames": [],
"loop": true,
"name": &"land",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rww2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv01b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfpjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouqkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0i1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1yuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ccc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alq1k")
}],
"loop": true,
"name": &"run",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dr0ne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jelrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_maci7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a336k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xewom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpcje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hjqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1nar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwolw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cepyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdtrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x64cl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07dgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7fe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ly1km")
}],
"loop": true,
"name": &"specialAttack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p76ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcekn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iubmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ak0tq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hcdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjluj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1k37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giu0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d47di")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrgmt")
}],
"loop": true,
"name": &"strongAttack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjucn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8j2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqga3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgbhs")
}],
"loop": true,
"name": &"walk",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0lp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hmmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7jew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfi3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr2te")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pprxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4sqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc85m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs0nr")
}],
"loop": true,
"name": &"weakAttack",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8yitw"]
size = Vector2(11, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ysmbc"]
size = Vector2(19, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ly2f"]
size = Vector2(28, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rw88r"]
size = Vector2(33, 20)

[node name="Node2D" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_aewtf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(54, 21)
sprite_frames = SubResource("SpriteFrames_yh5xd")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(48.5, 23.5)
shape = SubResource("RectangleShape2D_8yitw")

[node name="AttackArea" type="Area2D" parent="CharacterBody2D"]
script = ExtResource("3_vjtvk")

[node name="CollisionShape_Weak" type="CollisionShape2D" parent="CharacterBody2D/AttackArea"]
position = Vector2(63, 25)
shape = SubResource("RectangleShape2D_ysmbc")

[node name="CollisionShape_Strong" type="CollisionShape2D" parent="CharacterBody2D/AttackArea"]
position = Vector2(67, 26.5)
shape = SubResource("RectangleShape2D_3ly2f")

[node name="CollisionShape_Special" type="CollisionShape2D" parent="CharacterBody2D/AttackArea"]
position = Vector2(70, 26)
shape = SubResource("RectangleShape2D_rw88r")
